--- a/playbooks/roles/info_snowflake/tasks/log-nat.yaml
+++ b/playbooks/roles/info_snowflake/tasks/log-nat.yaml
@@ -15,4 +15,4 @@
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/snowflake_nat"
     regexp: "^{{ inventory_hostname }} "
-    state: "{{ _result.stdout_lines | ternary('present', 'absent') }}"
+    state: "{{ (_result.stdout | length > 0) | ternary('present', 'absent') }}"
