--- a/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
+++ b/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
@@ -12,7 +12,7 @@
   register: _result
 
 - name: Results of proxy log
-  when: _result.stdout
+  when: _result.stdout | length > 0
   changed_when: true
   ansible.builtin.debug:
     var: _result.stdout_lines
