--- a/playbooks/roles/info_tor/tasks/bridge-stats.yaml
+++ b/playbooks/roles/info_tor/tasks/bridge-stats.yaml
@@ -14,4 +14,4 @@
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/tor_bridge_stats"
     regexp: "^{{ inventory_hostname }} "
-    state: "{{ _result.stdout_lines | ternary('present', 'absent') }}"
+    state: "{{ (_result.stdout | length > 0) | ternary('present', 'absent') }}"
