--- a/playbooks/roles/setup_common/tasks/system-config.yaml
+++ b/playbooks/roles/setup_common/tasks/system-config.yaml
@@ -28,7 +28,7 @@
   register: _sysctl
 
 - name: Ensure sysctl values are up to date
-  changed_when: _sysctl.changed or _result.stderr
+  changed_when: _sysctl.changed or _result.stderr | length > 0
   failed_when: false # Ubuntu: sysctl: setting key "kernel.yama.ptrace_scope": Invalid argument
   ansible.builtin.command:
     cmd: sysctl --system 1>/dev/null
