--- a/playbooks/roles/info_misc/tasks/dry-update.yaml
+++ b/playbooks/roles/info_misc/tasks/dry-update.yaml
@@ -9,7 +9,7 @@
   register: _result
 
 - name: Output of unattended-upgrade dry-run
-  when: _result.stdout
+  when: _result.stdout | length > 0
   changed_when: true
   ansible.builtin.debug:
     var: _result.stdout_lines
