--- a/playbooks/roles/info_misc/tasks/log-nginx.yaml
+++ b/playbooks/roles/info_misc/tasks/log-nginx.yaml
@@ -8,13 +8,13 @@
   register: _result
 
 - name: Results of nginx log
-  when: _result.stdout
+  when: _result.stdout | length > 0
   changed_when: true
   ansible.builtin.debug:
     var: _result.stdout_lines
 
 - name: Results of nginx log stderr
-  when: _result.stderr
+  when: _result.stderr | length > 0
   changed_when: true
   ansible.builtin.debug:
     var: _result.stderr_lines
