--- a/playbooks/roles/info_snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info_snowflake/tasks/connections.yaml
@@ -37,4 +37,4 @@
     line: "{{ inventory_hostname }} {{ _result.stdout | default('n/a') }}"
     path: "{{ tmp_dir }}/snowflake_connections"
     regexp: "^{{ inventory_hostname }} "
-    state: "{{ _result.stderr | bool | ternary('absent', 'present') }}"
+    state: "{{ (_result.stderr | length > 0) | ternary('absent', 'present') }}"
