--- a/playbooks/roles/info_tor/tasks/bridgeline.yaml
+++ b/playbooks/roles/info_tor/tasks/bridgeline.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Get certificate
-  when: bridge_distribution
+  when: bridge_distribution | length > 0
   changed_when: false
   ansible.builtin.command:
     cmd: >-
@@ -17,7 +17,7 @@
     regexp: "^Bridge obfs4 {{ _torport }} {{ _fingerprint }} "
     path: /tmp/tor_bridgeline
     mode: "0600"
-    state: "{{ _cert.stdout_lines | ternary('present', 'absent') }}"
+    state: "{{ (_cert.stdout | length > 0) | ternary('present', 'absent') }}"
   with_items:
     - "{{ ansible_facts.default_ipv4.address }}"
     - "[{{ ansible_facts.default_ipv6.address }}]"
