--- a/playbooks/roles/info_tor/tasks/heartbeat.yaml
+++ b/playbooks/roles/info_tor/tasks/heartbeat.yaml
@@ -9,7 +9,7 @@
   register: _result
 
 - name: Results of Heartbeat
-  when: _result.stdout
+  when: _result.stdout | length > 0
   changed_when: true
   ansible.builtin.debug:
     var: _result.stdout_lines
