--- a/playbooks/roles/setup_common/tasks/nginx.yaml
+++ b/playbooks/roles/setup_common/tasks/nginx.yaml
@@ -12,7 +12,7 @@
   notify: Reload nginx
 
 - name: HTTPs for nginx
-  when: metrics_port
+  when: metrics_port > 0
   block:
     - name: Generate host key
       delegate_to: localhost
@@ -53,8 +53,8 @@
     - name: Compile nginx certificate
       ansible.builtin.copy:
         content: |
-          {{ lookup("file", "{{ ca_dir }}/{{ ca_name }}/clients/crts/{{ inventory_hostname }}.crt") }}
-          {{ lookup("file", "{{ ca_dir }}/{{ ca_name }}/{{ ca_name }}.crt") }}
+          {{ lookup("file", ca_dir + "/" + ca_name + "/clients/crts/" + inventory_hostname + ".crt") }}
+          {{ lookup("file", ca_dir + "/" + ca_name + "/" + ca_name + ".crt") }}
 
         dest: "/etc/nginx/conf.d/{{ inventory_hostname }}.crt"
       notify: Reload nginx
@@ -64,7 +64,7 @@
     - nginx-config
   block:
     - name: Create nginx site directories
-      when: nginx_site_directories
+      when: nginx_site_directories | length > 0
       ansible.builtin.file:
         path: /var/www/{{ item.dir }}
         state: directory
