--- a/playbooks/roles/setup_tor/vars/main.yaml
+++ b/playbooks/roles/setup_tor/vars/main.yaml
@@ -9,10 +9,10 @@ additional_ports_v6: >-
   {{ ['[' + ansible_facts.default_ipv6.address + ']'] | product(additional_ports) | map('join', ':') }}
 
 add_local_services_v4: >-
-  {{ (additional_ports_v4) | ternary('ADD_LOCAL_SERVICES="' + additional_ports_v4 | join(' ') + '"', '') }}
+  {{ (additional_ports_v4 | length > 0) | ternary('ADD_LOCAL_SERVICES="' + additional_ports_v4 | join(' ') + '"', '') }}
 
 add_local_services_v6: >-
-  {{ (additional_ports_v6) | ternary('ADD_LOCAL_SERVICES6="' + additional_ports_v6 | join(' ') + '"', '') }}
+  {{ (additional_ports_v6 | length > 0) | ternary('ADD_LOCAL_SERVICES6="' + additional_ports_v6 | join(' ') + '"', '') }}
 
 # remote Prometheus server
 add_remote_services_v4: >-
