fix vanilla build value

--- a/playbooks/roles/setup_common/tasks/validate.yaml
+++ b/playbooks/roles/setup_common/tasks/validate.yaml
@@ -40,7 +40,7 @@
     that:
       - "ansible_facts.memtotal_mb > 1024"
 
-- name: Validate vanilla kernel build method
+- name: Validate vanilla kernel build
   when: kernel_vanilla
   ansible.builtin.assert:
     quiet: true
