--- a/playbooks/roles/snapshot/tasks/delete-instance.yaml
+++ b/playbooks/roles/snapshot/tasks/delete-instance.yaml
@@ -2,7 +2,7 @@
 - name: Delete
   delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
-  when: delete_instance_afterwards
+  when: delete_instance_afterwards | bool
   changed_when: true
   ansible.builtin.command:
     cmd: >-
