--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -31,7 +31,7 @@
       ansible.builtin.include_tasks: "{{ role_path }}/../../../playbooks/roles/lib/_git.yaml"
 
     - name: Kernel
-      when: kernel_vanilla_build != "no"
+      when: kernel_vanilla_build in ('detached', 'yes')
       block:
         - name: Configure kernel
           changed_when: _kernel_configured.rc == 123
