add eu-stack info to gdb info

--- a/playbooks/roles/info_healthy/tasks/_minicoredumper.yaml
+++ b/playbooks/roles/info_healthy/tasks/_minicoredumper.yaml
@@ -21,6 +21,8 @@
           gdb -q -batch \
             -ex 'set logging enabled off' -ex 'set pagination off' -ex 'thread apply all bt' -ex 'quit' \
             -c /tmp/core
+          echo
+          eu-stack --core /tmp/core
         executable: /bin/bash
       register: _result
 
