--- a/playbooks/roles/info_snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info_snowflake/tasks/connections.yaml
@@ -35,6 +35,6 @@
   throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ _result.stdout | default('n/a') }}"
-    path: "{{ tmp_dir }}/snowflake_connections"
+    path: "{{ tmp_dir }}/snowflake_connection"
     regexp: "^{{ inventory_hostname }} "
     state: "{{ (_result.stderr | length > 0) | ternary('absent', 'present') }}"
