--- a/playbooks/roles/info_common/tasks/targets.yaml
+++ b/playbooks/roles/info_common/tasks/targets.yaml
@@ -13,21 +13,21 @@
       throttle: 1
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/targets_tor-ddos.yaml"
-        state: "{{ (ddos_metrics is defined and ddos_metrics) | ternary('present', 'absent') }}"
+        state: "{{ (ddos_metrics | default(false) ) | ternary('present', 'absent') }}"
 
     - name: Node targets
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/targets_node.yaml"
-        state: "{{ (node_metrics is defined and node_metrics) | ternary('present', 'absent') }}"
+        state: "{{ (node_metrics | default(false) ) | ternary('present', 'absent') }}"
 
     - name: Snowflake targets
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/targets_snowflake.yaml"
-        state: "{{ (snowflake_metrics is defined and snowflake_metrics) | ternary('present', 'absent') }}"
+        state: "{{ (snowflake_metrics | default(false) ) | ternary('present', 'absent') }}"
 
     - name: Tor bridge targets
       delegate_to: localhost
@@ -35,7 +35,7 @@
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/targets_tor-bridge.yaml"
         state:
-          "{{ (tor_metrics is defined and tor_metrics and (bridge_distribution is defined and bridge_distribution)) |
+          "{{ (tor_metrics is defined | default(false) and bridge_distribution | default(false)) |
           ternary('present', 'absent') }}"
 
     - name: Tor server targets
@@ -44,5 +44,5 @@
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/targets_tor-server.yaml"
         state:
-          "{{ (tor_metrics is defined and tor_metrics and (bridge_distribution is undefined or not bridge_distribution)) |
+          "{{ (tor_metrics | default(false) and (bridge_distribution is undefined or not bridge_distribution)) |
           ternary('present', 'absent') }}"
