--- a/playbooks/roles/info_healthy/tasks/issue.yaml
+++ b/playbooks/roles/info_healthy/tasks/issue.yaml
@@ -23,6 +23,6 @@
   throttle: 1
   ansible.builtin.blockinfile:
     block: "{{ _result.stdout }}"
-    path: "{{ tmp_dir }}/issue.log"
+    path: "{{ tmp_dir }}/issue-current.log"
     marker: "# {mark} {{ inventory_hostname }} "
     state: "{{ (_result.stdout | length > 0) | ternary('present', 'absent') }}"
