--- a/playbooks/roles/info_healthy/tasks/_dmesg.yaml
+++ b/playbooks/roles/info_healthy/tasks/_dmesg.yaml
@@ -9,5 +9,5 @@
   delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
   ansible.builtin.copy:
-    dest: "{{ tmp_dir }}/dmesg/{{ inventory_hostname }}.dmesg"
+    dest: "{{ tmp_dir }}/dmesg/{{ inventory_hostname }}.log"
     content: "{{ _result.stdout }}"
