implement Debian release upgrade

--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -5,6 +5,9 @@ additional_software: []
 # e.g.:  -e custom_command="'cd linux; make clean'"
 custom_command: ""
 
+# e.g.:  -e desired_debian_release=trixie
+desired_debian_release: ""
+
 # Debian kernel flavours
 kernel_debian_backports: false
 kernel_debian_cloud: false
