--- a/playbooks/roles/lib/_git.yaml
+++ b/playbooks/roles/lib/_git.yaml
@@ -58,6 +58,6 @@
 
 - name: Git repo changed "{{ _repo_dir }}"
   ansible.builtin.set_fact:
-    _git_repo_changed: "{{  __repo.changed or __repo.before == None or
+    _git_repo_changed: "{{ __repo.changed or __repo.before == None or
       __updated.changed or __cleaned.changed or __patched.changed or
-      force_rebuild | default(false) }}"
+      force_rebuild is defined and force_rebuild | bool }}"
