Ansible 12 for artefact hook + remove deletion task

--- a/playbooks/roles/info_healthy/defaults/main.yaml
+++ b/playbooks/roles/info_healthy/defaults/main.yaml
@@ -1,9 +1,8 @@
 ---
-artefact_cleanup: false
 artefact_paths: []
 artefact_patterns: []
 artefact_hook: ""
-artefact_size: "0"
+artefact_size: "0k"
 
 issue_since: "1 day ago"
 
