--- a/playbooks/roles/snapshot/tasks/shutdown.yaml
+++ b/playbooks/roles/snapshot/tasks/shutdown.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Shutdown the system
+- name: Shutdown the instance
   community.general.shutdown:
 
 - name: Additional wait after Shutdown
